tools/infrastructure/kubernetes/kustomize/overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supertool
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: supertool
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 256Mi
