tools/infrastructure/kubernetes/kustomize/overlays/dev/remove-networkpolicy.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: supertool
